Ozhaev Zaynudin cartoon.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp: In function 'void DrawHouse1(double, double, double, double, COLORREF)':
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: narrowing conversion of 'x' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
                         {        x                , ROUND( y - 140 * sizeY )}};
                                                                              ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: narrowing conversion of 'y' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: narrowing conversion of 'y' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: narrowing conversion of 'x' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:219:78: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:235:81: warning: narrowing conversion of 'y' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
                             { ROUND( x - 50 * sizeX ),        y                }};
                                                                                 ^
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:235:81: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:235:81: warning: narrowing conversion of 'y' from 'double' to 'LONG {aka long int}' inside { } [-Wnarrowing]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:235:81: warning: conversion to 'LONG {aka long int}' from 'double' may alter its value [-Wconversion]
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp: In function 'void DrawZoomHouse1()':
C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp:366:45: error: expected ')' before numeric constant
         DrawHouse1 (320+t*0.1, 260+t*.2, 1+t.1, 1+t*.1, RGB (0, 80, 80));
                                             ^
---------------------------------------------------------------------------------------------
[06.05.2021 17:39:47,75 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\1proekt\1proekt> g++.exe "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.cpp" -o "C:\Users\zainu\Desktop\курс\1proekt\1proekt\Ozhaev Zaynudin cartoon.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
